# openai-sdk

./: README.md
0001_simpleagent/: main.py  pyproject.toml
0001_simpleagent/my_agent/: assistant_agent.py
0001_simpleagent/my_config/: gemini_config.py
0002_agent-with_lama/: main.py  pyproject.toml
0002_agent-with_lama/my_agent/: assistant_agent.py
0002_agent-with_lama/my_config/: gemini_config.py  qroq_config.py
01_uv/01_project_uv/: pyproject.toml
01_uv/01_project_uv/src/01_project_uv/: __init__.py
01_uv/project_01/: pyproject.toml
01_uv/project_02/: pyproject.toml
01_uv/project_02/src/project_02/: __init__.py
03_litellm_openai_agent/: agent_as_tool.py  app.py  handsoff.py  main.py  model_settings.py  pyproject.toml
04_hello_agent/async-hello/: pyproject.toml
04_hello_agent/sync-hello/: main.py  pyproject.toml
agent-simple/: main.py  pyproject.toml
chainlit-hello/: pyproject.toml
qsproj/: main - Copy.py  main.py  pyproject.toml
sdk-practice/: main.py  pyproject.toml
sdk-practice/agent/: 01-name.py  02-dynamic_ins.py  03-handoff_discription.py  04-model.py  06-tools.py  07-tool-choice.py
sdk-practice/class-work/: app.py  main.py
sdk-practice/context/: llmSystem.py  llmTool.py  llmUser.py  localContext.py
sdk-practice/guardrail/: gwithInstance.py  simple.py  zia.py
sdk-practice/handoff/: Fhandoff.py  callable.py  handOffFunc.py  handoff.py  inputFilter.py  removeAllTool.py
