[project]
name = "01-project-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "madnan-github", email = "dononlineboss@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
01-project-uv = "01_project_uv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
