[project]
name = "project-02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "madnan-github", email = "dononlineboss@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
project-02 = "project_02:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
